--- a/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
+++ b/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
@@ -10,16 +10,30 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_send_cacheable_header.xml,v 1.1 2010/10/18 05:24:28 ewang Exp $
+* $Id: lang_screen_send_cacheable_header.xml,v 1.2 2011/11/02 22:43:37 cupreti Exp $
 *
 */
 -->
 
 <contents>
 	<section name="Send Cacheable Headers Settings">
-		<function_call>
-			<paint_function name="paintCacheableHeadersSettings" />
-        </function_call>
+		<field>
+			<function_call>
+				<paint_function name="paintCacheableHeadersSettings" />
+			</function_call>
+		</field>
+		<field attribute="cacheale_header_protocol">
+			<display_name>Protocol(s)</display_name>
+			<note />
+		</field>
+		<field attribute="cache_control_http">
+			<display_name>Http Cache Control Level</display_name>
+			<note />
+		</field>
+		<field attribute="cache_control_https">
+			<display_name>Https Cache Control Level</display_name>
+			<note />
+		</field>		
 	</section>
 	<section name="Root URLs to Send Cacheable Headers">
 		<field>
