--- a/core/assets/form/form_question_types/form_question_type_datetime/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_types/form_question_type_datetime/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.4 2006/12/06 00:35:30 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.5 2011/11/04 01:55:20 mhaidar Exp $
 *
 * Localised Strings File for Date/Time Form Question Asset
 */
@@ -19,4 +19,5 @@
 <strings>
 <string source="core_form_datetime_text_box_question">Display as Text Box ?</string>
 <string source="core_form_datetime_invalid_date_time">Invalid date/time</string>
+<string source="core_form_datetime_12_hour_format">12 hour</string>
 </strings>
