--- a/packages/cms/page_templates/page_password_reset/locale/en/lang_screen_details.xml
+++ b/packages/cms/page_templates/page_password_reset/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.2 2006/12/07 00:04:22 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.3 2011/11/04 03:53:18 cupreti Exp $
 *
 */
 -->
@@ -35,5 +35,9 @@
 			&lt;/ul&gt;
 			</note>
 		</field>
-	</section>
+		<field attribute="invalid_user_error">
+			<display_name>Show Error</display_name>
+			<note>Setting this option to "yes" will display an error message if the user submits a non-existant username for the password reset request.</note>
+		</field>
+	</section>	
 </contents>
