--- a/packages/cms/page_templates/page_password_reset/locale/en/lang_strings.xml
+++ b/packages/cms/page_templates/page_password_reset/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.4 2006/12/07 00:04:22 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.5 2011/11/04 03:53:18 cupreti Exp $
 */
 -->
 <strings>
@@ -37,7 +37,7 @@
 	<string source="cms_password_reset_request_receipt_msg">Please check your email for instructions on how to complete the password reset procedure.</string>
 	<string source="cms_password_reset_reset_msg">Please enter a new password for your account</string>
 	<string source="cms_password_reset_reset_receipt_msg">Your password has been reset and you are now logged in.</string>
-
+	<string source="cms_password_reset_message_invalid_username">Specified username does not exist.</string>
 
 
 </strings>
