--- a/packages/cms/page_templates/page_password_reset/locale/en/lang_screen_details.xml
+++ b/packages/cms/page_templates/page_password_reset/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.3 2011/11/04 03:53:18 cupreti Exp $
+* $Id: lang_screen_details.xml,v 1.4 2011/11/11 03:15:40 cupreti Exp $
 *
 */
 -->
@@ -37,7 +37,7 @@
 		</field>
 		<field attribute="invalid_user_error">
 			<display_name>Show Error</display_name>
-			<note>Setting this option to "yes" will display an error message if the user submits a non-existant username for the password reset request.</note>
+			<note>Setting this option to "yes" will display an error message if the user submits a non-existent username for the password reset request.</note>
 		</field>
 	</section>	
 </contents>
