--- a/packages/import_tools/locale/en/lang_errors.xml
+++ b/packages/import_tools/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.5 2010/08/26 06:45:06 akarelia Exp $
+* $Id: lang_errors.xml,v 1.5.8.1 2011/11/23 01:28:00 ewang Exp $
 *
 */
 
@@ -31,5 +31,10 @@
 	<!-- Import Assets from XML Tool -->
 	<error code="HIPO0095">No file selected to use</error>
 	<error code="HIPO0096">Provided Assetid is not for a valid Asset</error>
+	
+	<!-- Export Asset from XML Tool -->
+	<error code="EXP0001">Could not compress the exported file for download. System Exit Status Code %1$d</error>
+	<error code="EXP0002">Invalid filesize detected</error>
+	<error code="EXP0003">Can not acquire lock of Import Tools Manager. Probably someone else is doing export right now.</error>
 
 </errors>
