--- a/packages/import_tools/locale/en/lang_strings.xml
+++ b/packages/import_tools/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.19 2011/10/28 03:58:32 ewang Exp $
+* $Id: lang_strings.xml,v 1.20 2011/11/23 01:25:37 ewang Exp $
 *
 *
 * CMS Package Localised Strings File
@@ -110,5 +110,7 @@
 <strong>Note:</strong> Export of large number of assets should be performed by sysadmin using scripts. See <a href="http://manuals.matrix.squizsuite.net/server-administrator/chapters/import-scripts#export_to_xml.php" target="_blank">manual</a> for details.
 ]]></string>
 <string source="tool_export_assets_to_xml_target_parent">links to target parent asset id</string>
+
+<string source="tool_export_assets_to_xml_can_not_acquire_lock">The locks on the Import Tools Manager are currently held by user #%s Only one user is allowed use of this screen at a time.</string>
 
 </strings>
