Feature #5456: Online Quiz Page Interactive Mode. The detailed description of this feature is available on the bug report. The interactive mode does not make use of the listing engine and so we have an option to enable/disable interactive mode. This is used for the edit interface to show/hide the listing engine settings and is used throughout the code to switch the behaviour of this asset.
Starting at Page_Online_Quiz::printFrontend() we switch to a Page_Online_Quiz::processInteractiveQuestions() which takes care of all needed processing before displaying each page. The processing here involves executing the required actions (next, retry, submit answer, submit(finish)). Question responses and all other required status/tracking information will be saved to the session.

At Page_Online_Quiz::printBody() we switch to calling Page_Online_Quiz::printContents() instead of the parent::printBody() and in Page_Online_Quiz::printContents() we print the Page Contents Bodycopy directly instead of calling the parent::printContents() hence bypassing the listing engine in both situations.
Page_Online_Quiz::printContents() has an additional change to it upon processing the entire submission where we have to adjust the points such that the retried questions don't count.

Page_Online_Quiz::loadQuestionPagination() is highly depended on in this mode and is updated frequently by Page_Online_Quiz::processInteractiveQuestions() while undertaking the quiz.
'pages_to_questions' index will always contain up to date information on which question is to be displayed on each page and each page will only contain one question at any one time. This question may be the initial question or the retry question.
'questions_to_pages' index initially contains all questions to be displayed and is updated by adding the questions used on a retry.

I have utlised these existing indexes to help maintain existing functionality in other parts of the quiz e.g. Page_Online_Quiz::getSubmitButtonKeywordReplacement(

--- a/packages/cms/locale/en/lang_errors.xml
+++ b/packages/cms/locale/en/lang_errors.xml
@@ -11,7 +11,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.25 2011/11/08 23:21:07 csmith Exp $
+* $Id: lang_errors.xml,v 1.26 2011/11/25 02:22:35 mhaidar Exp $
 *
 */
 -->
@@ -226,4 +226,11 @@
 
 	<!-- remote content -->
 	<error code="CMS0111">You cannot include or redirect to one of your own urls.</error>
+	
+	<error code="CMS0112">Shortage of questions for pool root node (Id: #%s). Check for correct pool size or user read access.</error>
+	<!-- packages/cms/page_templates/page_online_quiz/page_online_quiz.inc:loadQuestionPagination() -->
+		
+	<error code="CMS0113">Not enough questions in the pool for pool root node (Id: #%s).</error>
+	<!-- packages/cms/page_templates/page_online_quiz/page_online_quiz_edit_fns.inc:processQuestionPoolSetup() -->
+	
 </errors>
