--- a/packages/cms/page_templates/page_online_quiz/locale/en/lang_screen_details.xml
+++ b/packages/cms/page_templates/page_online_quiz/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.12 2011/11/25 02:22:35 mhaidar Exp $
+* $Id: lang_screen_details.xml,v 1.13 2011/11/30 00:32:43 mhaidar Exp $
 *
 */
 -->
@@ -34,7 +34,7 @@
 		</field>
 		<field>
 			<display_name>Quiz repeatable?</display_name>
-			<note>Determines whether or not the quiz can be retaken once the user has started the test once.</note>
+			<note>Determines whether or not the quiz can be retaken once the user has completed the test once.</note>
 			<function_call>
 				<paint_function   name="paintCanRetake"   />
 				<process_function name="processCanRetake" />
@@ -59,12 +59,12 @@
 		<field attribute="score_format">
 			<display_name>Score Format</display_name>
 			<note>Score format used for %quiz_score% keyword and for Score field in Submission Logs. Availabe keywords: &lt;br /&gt;
-			For Thank You Bodycopy and Submission Logs: &lt;br /&gt;
+			For use of %quiz_score% in Thank You Bodycopy and for Submission Logs: &lt;br /&gt;
 			&lt;ul&gt;
 			&lt;li&gt;%quiz_total_points% - The total points obtained for the Quiz&lt;/li&gt;
 			&lt;li&gt;%quiz_total_available_points% - The total points available (ie; maximum score) for the Quiz&lt;/li&gt;
 			&lt;/ul&gt;
-			For Thank You and Page Contents Bodycopies and Submission Logs (Interactive Mode only): &lt;br /&gt;
+			For use of %quiz_score% in Thank You and Page Contents Bodycopies and for Submission Logs (Interactive Mode only): &lt;br /&gt;
 			&lt;ul&gt; 
 			&lt;li&gt;%correct_answers% - The number of questions answered correctly.&lt;/li&gt;
 			&lt;li&gt;%total_questions% - The total number of questions answered.&lt;/li&gt;
@@ -78,7 +78,7 @@
 	<section name="Question Pooling">
 		<field>
 			<display_name>Question Pools</display_name>
-			<note>Select the root nodes to extract Online Quiz Multiple-Choice Questions from. Note that the feedback system does not support the Drop Down List Option Style. Please refer to manuals on how feedback in generated.</note>
+			<note>Select the root nodes to extract Online Quiz Multiple-Choice Questions from. Please refer to manuals on how feedback in generated per Option Style.</note>
 			<function_call>
 				<paint_function   name="paintRootNode"  />
 				<process_function name="processRootNode" />
@@ -88,7 +88,7 @@
 			<display_name>Question Pool Setup</display_name>
 			<note>
 			Number of questions under each 'Pool Node' should be greater than or equal to the 'Pool Size' plus ('Pool Size' times the 'Retries per Question'). &lt;br /&gt;
-			The question order is randomised under each pool but the (Pool Order) can be specified. All fields must be integers.
+			The question order is randomised under each pool but the 'Pool Order' can be specified. All fields must be integers.
 			</note>
 			<function_call>
 				<paint_function   name="paintQuestionPoolSetup"   />
