--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.136 2011/10/06 22:59:57 ewang Exp $
+* $Id: lang_errors.xml,v 1.137 2011/12/20 03:57:59 akarelia Exp $
 *
 */
 
@@ -1818,6 +1818,7 @@ Full Node Contents :
 	<!-- Trigger - Remove future lineage cron -->
 	<error code="CORE0308">Cannot remove future lineage cron job #%1$s</error>
 	
+	<error code="CORE0309">More than one default option was set in the CSV file, but the Metadat Field is not set for multiple selection. Only the first default option found will be used.</error>
 	
 	<error code="RPRT0000">Could not open temporary file, report generation aborted</error>
 		<!-- packages/cms/reports/report_links/report_links_edit_fns.inc:84: -->
