--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.398.2.9 2011/12/07 04:40:34 mhaidar Exp $
+* $Id: lang_strings.xml,v 1.398.2.10 2012/01/04 00:06:44 csmith Exp $
 *
 */
 
@@ -1125,6 +1125,8 @@
 	<string source="csv_upload_instructions_example_1">&lt;b&gt;Example 1 (never delete(OFF)):&lt;/b&gt; http://www.mysite.com/page_1, http://www.mysite.com/home, 2003-17-12 10:27:00, 0</string>
 	<string source="csv_upload_instructions_example_2">&lt;b&gt;Example 2 (no expiry date and never delete(OFF))):&lt;/b&gt; http://www.mysite.com/page_1, http://www.mysite.com/home, , 0</string>
 	<string source="csv_upload_instructions_example_3">&lt;b&gt;Example 3 (no expiry date and never delete(ON)):&lt;/b&gt; http://www.mysite.com/page_1, http://www.mysite.com/home, , 1</string>
+	<string source="csv_upload_header">Column Headings in CSV File?</string>
+	<string source="csv_upload_header_example">If the first row of your CSV file contains column headings, select this field to ensure Matrix correctly imports the CSV file.</string>
 	<string source="never_delete">Never Delete</string>
 	<string source="404_remap_description">The page where 404 requests are remapped to</string>
 	<string source="redirecting_you_to">Redirecting you to %s</string>
