--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.134.2.3 2011/12/23 00:51:37 akarelia Exp $
+* $Id: lang_errors.xml,v 1.134.2.4 2012/01/04 01:39:50 mhaidar Exp $
 *
 */
 
@@ -1842,6 +1842,7 @@ Full Node Contents :
 	<error code="TRIG0004">No tag is specified in trigger condition: 'Asset is tagged'</error>
 
 	<error code="TRIG0005">Unable to select context #%1$s for use in trigger, the context no longer exists</error>
+	<error code="TRIG0006">Unable to determine Tree ID of the asset the trigger condition: 'Tree Location' is executing on. Revise your Trigger setup.</error>
 
 	<!-- CTX = Context/multi-lingual related errors -->
 	<error code="CTX0001">Cannot create context "%1$s" in database: %2$s</error>
